<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Sarvestan</string>
    <string name="title_activity_main">Sarvestan</string>
    <string name="package_name">ir.mjb4khshi.sarvestan.kntu</string>
    <string name="custom_url_scheme">ir.mjb4khshi.sarvestan.kntu</string>
    <string name="widget_combo_name">سروستان: ویجت جامع (۴×۲)</string>
    <string name="widget_combo_desc">ویجت جامع سروستان (کلاس بعدی، امتحان و معدل)</string>
    <string name="widget_gpa_name">سروستان: معدل و کارنامه (۲×۲)</string>
    <string name="widget_gpa_desc">ویجت شیک معدل کل و کارنامه</string>
    <string name="widget_class_name">سروستان: کلاس بعدی (۲×۲)</string>
    <string name="widget_class_desc">ویجت کلاس بعدی و برنامه امروز</string>

    <!-- لانچر شورتکات‌ها -->
    <string name="shortcut_schedule_short">برنامه هفتگی</string>
    <string name="shortcut_schedule_long">مشاهده برنامه هفتگی</string>
    <string name="shortcut_behestan_short">بهستان</string>
    <string name="shortcut_behestan_long">سامانه آموزشی بهستان</string>
    <string name="shortcut_vc_short">کلاس مجازی</string>
    <string name="shortcut_vc_long">سامانه کلاس‌های مجازی (VC)</string>
</resources>
